refactor tag usage